@@ -274,9 +274,9 @@ InputBox::ok=&Okay
 1058=Last Target
 1059=Target Self
 1060=Set Last Target
-1061=Target Random Red
+1061=Target Random Murderer
 1062=Target Random Grey
-1063=Target Random Blue
+1063=Target Random Innocent
 1064=Target Random Enemy
 1065=Target Random Friendly
 1066=Target Random Non-Friendly
@@ -609,3 +609,15 @@ InputBox::ok=&Okay
 1507=Staff Only Items
 1508={0}'s Stats
 1509=Eat Enchanted Apple
+1510=Target Closest Murderer
+1511=Target Closest Grey
+1512=Target Closest Innocent
+1513=Target Closest Enemy
+1514=Target Closest Friendly
+1515=Target Closest Non-Friendly
+1516=Target Closest Enemy Humaniod
+1517=Target Closest Grey Humaniod
+1518=Target Closest Innocent Humaniod
+1519=Target Closest Criminal Humaniod
+1520=Target Closest Criminal
+1521=Warning: The profile '{0}' is in use by another instance of Razor!\nIf you make changes to this profile it may become corrupted. It is recommended that you use a different profile for each instance of Razor.
