@@ -240,13 +240,13 @@ namespace Assistant
 		{
 			Spell s = null;
 
-			if ( World.Player.Poisoned )
+			if ( World.Player.Poisoned && ClientCommunication.AllowBit( FeatureBit.BlockHealPoisoned ) )
 			{
 				s = Get( 2, 3 ); // cure 
 			}
 			else if ( World.Player.Hits+2 < World.Player.HitsMax )
 			{
-				if ( World.Player.Hits+30 < World.Player.HitsMax && World.Player.Mana >= 12 )
+				if ( !ClientCommunication.AllowBit( FeatureBit.BlockHealPoisoned ) || World.Player.Hits+30 < World.Player.HitsMax && World.Player.Mana >= 12 )
 					s = Get( 4, 5 ); // greater heal
 				else 
 					s = Get( 1, 4 ); // mini heal
@@ -272,7 +272,7 @@ namespace Assistant
 		{
 			Spell s = null;
 
-			if ( World.Player.Poisoned )
+			if ( World.Player.Poisoned && ClientCommunication.AllowBit( FeatureBit.BlockHealPoisoned ) )
 				s = Get( 2, 3 ); // cure
 			else if ( World.Player.Hits+1 < World.Player.HitsMax )
 				s = Get( 1, 4 ); // mini heal
